<resources>
    <string name="app_name">Gitter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_user">Enter Github Username</string>
    <string name="add_user">Add user</string>
    <string name="repository">Repository :</string>
    <string name="search">Search</string>
    <string name="users_list">Users</string>
    <string name="commitCount">"Commits : "</string>
    <string name="owner">Owner</string>
    <string name="open_issues">"Open issues : "</string>
    <string name="isPrivate">Private</string>
    <string name="isPublic">Public</string>
    <string name="background_of_login_bottom">Background of login bottom</string>
    <string name="enter_your_email">Email</string>
    <string name="enter_your_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Don\'t have an account?<u> Click here </u></string>
    <string name="enter_your_username">Username</string>
    <string name="enter_your_address">Address</string>
    <string name="reenter_your_password">Re-enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already a member?<u> Click here </u></string>
    <string name="enter_your_details">Enter your details</string>
    <string name="logo_of_app">logo of app</string>
    <string name="ok">OK</string>
    <string name="logout_message">Are you sure you want to log out drom the App</string>
    <string name="password_miss_match">Password and confirm password does not match</string>
    <string name="password_minimum_characters">Password must be minimum of 8 charecters</string>
    <string name="valid_email_check">Please provide valid email address</string>
    <string name="invalid_user">Invalid Username or password</string>
</resources>