<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="io.github.occultus73.gitter.ui.authentication.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/launcher_bg">


<!--        <ImageView-->
<!--            android:id="@+id/imageView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:contentDescription="@string/login_background_image_description"-->
<!--            android:scaleType="centerCrop"-->
<!--            android:src="@drawable/login_background_image"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <ImageView
            android:id="@+id/bg_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen400"
            android:contentDescription="@string/background_of_login_bottom"
            android:scaleType="fitStart"
            android:layout_marginLeft="@dimen/dimen8"
            android:layout_marginRight="@dimen/dimen8"
            android:src="@drawable/login_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen32"
            android:layout_marginTop="@dimen/dimen32"
            android:layout_marginEnd="@dimen/dimen32"
            android:autofillHints="@string/enter_your_email"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/dimen8"
            android:hint="@string/enter_your_email"
            android:text="@={loginViewModel.email}"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dimen16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/bg_login" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen32"
            android:layout_marginTop="@dimen/dimen32"
            android:layout_marginEnd="@dimen/dimen32"
            android:autofillHints="@string/enter_your_password"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/dimen8"
            android:text="@={loginViewModel.password}"
            android:hint="@string/enter_your_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/dimen16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_editText" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen32"
            android:layout_marginTop="@dimen/dimen32"
            android:layout_marginEnd="@dimen/dimen32"
            android:background="@drawable/button_background"
            android:padding="@dimen/dimen16"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:onClick="@{() -> loginViewModel.onLoginButtonClicked()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_editText" />

        <TextView
            android:id="@+id/forgot_password_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16"
            android:text="@string/forgot_password"
            android:textColor="@color/darkgray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/goTo_signUp_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16"
            android:text="@string/register"
            android:textColor="@color/darkgray"
            android:onClick="@{() -> loginViewModel.goToSignUpClicked()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_textView" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
