<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signUpViewModel"
            type="io.github.occultus73.gitter.ui.authentication.registration.RegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/launcher_bg">

<!--        <ImageView-->
<!--            android:id="@+id/imageView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:contentDescription="@string/login_background_image"-->
<!--            android:scaleType="centerCrop"-->
<!--            android:src="@drawable/login_background_image" />-->

        <ImageView
            android:id="@+id/bg_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_of_login_bottom"
            android:scaleType="centerCrop"
            android:src="@drawable/signup_background" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/login_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen32"
            android:text="@string/sign_up"
            android:textColor="@color/darkgray"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="@string/enter_your_email"
            android:text="@={signUpViewModel.email}"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/login_textView" />


        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="@string/enter_your_email"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:text="@={signUpViewModel.password}"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/email_editText" />

        <EditText
            android:id="@+id/confirm_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="@string/enter_your_password"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:text="@={signUpViewModel.confirmPassword}"
            android:hint="@string/reenter_your_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="16dp"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/password_editText" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="@dimen/dimen32"
            android:background="@drawable/button_background"
            android:padding="16dp"
            android:onClick="@{() -> signUpViewModel.onSignUpClicked()}"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/goTo_login_textView" />

        <TextView
            android:id="@+id/goTo_login_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="@dimen/dimen32"
            android:text="@string/already_have_an_account"
            android:textColor="@color/darkgray"
            android:onClick="@{() -> signUpViewModel.goToLoginClicked()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

