<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_margin="@dimen/dimen8">

       <ImageView
           android:id="@+id/image_icon"
           android:layout_width="@dimen/dimen40"
           android:layout_height="@dimen/dimen40"
           android:layout_marginTop="@dimen/dimen16"
           android:layout_marginStart="@dimen/dimen16"
           android:contentDescription="@string/logo_of_app"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           android:src="@drawable/ic_launcher_foreground"/>


       <TextView
           android:id="@+id/title_textview"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/app_name"
           android:layout_marginStart="@dimen/dimen16"
           android:layout_marginEnd="@dimen/dimen16"
           android:textSize="@dimen/textSize24"
           android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="@id/image_icon"
           app:layout_constraintStart_toEndOf="@id/image_icon"
           app:layout_constraintBottom_toBottomOf="@id/image_icon"/>


       <TextView
           android:id="@+id/body_text_textview"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/dimen16"
           android:layout_marginEnd="@dimen/dimen16"
           android:layout_marginTop="@dimen/dimen25"
           android:padding="@dimen/dimen8"
           android:textSize="@dimen/textSize16"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/title_textview"
           app:layout_constraintStart_toStartOf="parent"
           />

       <TextView
           android:id="@+id/ok_textview"
           android:layout_width="wrap_content"
           android:layout_height="0dp"
           android:layout_marginEnd="@dimen/dimen16"
           android:layout_marginTop="@dimen/dimen25"
           android:padding="@dimen/dimen8"
           android:text="@string/ok"
           android:textColor="@color/colorAccent"
           android:textStyle="bold"
           app:layout_constraintTop_toBottomOf="@id/body_text_textview"
           app:layout_constraintEnd_toEndOf="parent"/>

   </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>